WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
266318
[WebGPU] CTS test validation/createBindGroupLayout.html is failing
https://bugs.webkit.org/show_bug.cgi?id=266318
Summary
[WebGPU] CTS test validation/createBindGroupLayout.html is failing
Mike Wyrzykowski
Reported
2023-12-12 17:52:38 PST
[WebGPU] CTS test validation/createBindGroupLayout.html is failing
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-12-12 17:52:53 PST
<
rdar://problem/119586689
>
Mike Wyrzykowski
Comment 2
2023-12-12 23:58:26 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21723
Mike Wyrzykowski
Comment 3
2023-12-13 10:17:49 PST
***
Bug 266306
has been marked as a duplicate of this bug. ***
Mike Wyrzykowski
Comment 4
2023-12-13 14:43:48 PST
***
Bug 266301
has been marked as a duplicate of this bug. ***
EWS
Comment 5
2023-12-14 04:58:09 PST
Committed
272032@main
(8ababab1ace6): <
https://commits.webkit.org/272032@main
> Reviewed commits have been landed. Closing PR #21723 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug