[WebGPU] CTS test validation/createBindGroup.html and validation/createBindGroupLayout.html are failing https://bugs.webkit.org/show_bug.cgi?id=266318 <radar://119586689>

Reviewed by Tadeu Zagallo.

Add validation such tat createBindGroupLayout.html passes and add the passing
expectation.

Add passing expectations for validation/createBindGroup.html and add some
validation so that the CTS test passes.

* LayoutTests/http/tests/webgpu/webgpu/api/validation/createBindGroup-expected.txt:
* LayoutTests/http/tests/webgpu/webgpu/api/validation/createBindGroupLayout-expected.txt:
* Source/WebCore/Modules/WebGPU/GPUStorageTextureAccess.h:
(WebCore::convertToBacking):
* Source/WebCore/Modules/WebGPU/GPUStorageTextureAccess.idl:
* Source/WebCore/Modules/WebGPU/Implementation/WebGPUConvertToBackingContext.cpp:
(WebCore::WebGPU::ConvertToBackingContext::convertToBacking):
* Source/WebCore/Modules/WebGPU/Implementation/WebGPUDeviceImpl.cpp:
(WebCore::WebGPU::DeviceImpl::createSampler):
(WebCore::WebGPU::DeviceImpl::createBindGroup):
* Source/WebCore/Modules/WebGPU/InternalAPI/WebGPU.serialization.in:
* Source/WebCore/Modules/WebGPU/InternalAPI/WebGPUStorageTextureAccess.h:
* Source/WebGPU/WGSL/GlobalVariableRewriter.cpp:
(WGSL::convertAccess):
(WGSL::bindingMemberForGlobal):
* Source/WebGPU/WGSL/WGSL.h:
* Source/WebGPU/WebGPU/BindGroup.mm:
(WebGPU::hasProperUsageFlags):
(WebGPU::hasBinding):
(WebGPU::formatType):
(WebGPU::formatIsFloat):
(WebGPU::formatIsDepth):
(WebGPU::formatIsSignedInt):
(WebGPU::formatIsUnsignedInt):
(WebGPU::validateTextureSampleType):
(WebGPU::validateTextureViewDimension):
(WebGPU::validateStorageTextureViewFormat):
(WebGPU::validateSamplerType):
(WebGPU::Device::createBindGroup):
* Source/WebGPU/WebGPU/BindGroupLayout.h:
(WebGPU::BindGroupLayout::create):
(WebGPU::BindGroupLayout::createInvalid):
* Source/WebGPU/WebGPU/BindGroupLayout.mm:
(WebGPU::createArgumentDescriptor):
(WebGPU::Device::createBindGroupLayout):
(WebGPU::BindGroupLayout::BindGroupLayout):
(WebGPU::BindGroupLayout::uniformBuffersPerStage const):
(WebGPU::BindGroupLayout::storageBuffersPerStage const):
(WebGPU::BindGroupLayout::samplersPerStage const):
(WebGPU::BindGroupLayout::texturesPerStage const):
(WebGPU::BindGroupLayout::storageTexturesPerStage const):
(WebGPU::BindGroupLayout::device const):
(WebGPU::BindGroupLayout::isAutoGenerated const):
* Source/WebGPU/WebGPU/Buffer.h:
* Source/WebGPU/WebGPU/Buffer.mm:
(WebGPU::Buffer::isDestroyed const):
* Source/WebGPU/WebGPU/ComputePipeline.mm:
(WebGPU::createComputePipelineState):
(WebGPU::returnInvalidComputePipeline):
(WebGPU::Device::createComputePipeline):
(WebGPU::Device::createComputePipelineAsync):
* Source/WebGPU/WebGPU/Device.h:
* Source/WebGPU/WebGPU/PipelineLayout.mm:
(WebGPU::Device::createPipelineLayout):
* Source/WebGPU/WebGPU/RenderPipeline.mm:
(WebGPU::convertToMTLCompare):
(WebGPU::convertAccess):
(WebGPU::convertFormat):
(WebGPU::Device::addPipelineLayouts):
(WebGPU::returnInvalidRenderPipeline):
(WebGPU::Device::createRenderPipeline):
(WebGPU::Device::createRenderPipelineAsync):
* Source/WebGPU/WebGPU/Sampler.mm:
(WebGPU::compareFunction):
* Source/WebGPU/WebGPU/ShaderModule.mm:
(WebGPU::wgslAccess):
(WebGPU::wgslFormat):
(WebGPU::convertBindingLayout):
* Source/WebGPU/WebGPU/Texture.h:
* Source/WebGPU/WebGPU/Texture.mm:
(WebGPU::Texture::hasStorageBindingCapability):
(WebGPU::Device::errorValidatingTextureCreation):
(WebGPU::Texture::isDestroyed const):
(WebGPU::hasStorageBindingCapability): Deleted.
* Source/WebGPU/WebGPU/TextureView.h:
* Source/WebGPU/WebGPU/TextureView.mm:
(WebGPU::TextureView::usage const):
(WebGPU::TextureView::sampleCount const):
(WebGPU::TextureView::format const):
(WebGPU::TextureView::mipLevelCount const):
(WebGPU::TextureView::isDestroyed const):
* Source/WebGPU/WebGPU/WebGPU.h:

Canonical link: https://commits.webkit.org/272032@main